# sequential-id-alloc

./: Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
